fix: add more contrast to sidebar

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -153,6 +153,15 @@ table {
             }
         }
     }
+
+    transition: none;
+    opacity: 1;
+}
+
+.sidebar > nav > ul > li > ul > li {
+    &:hover {
+        opacity: 0.75;
+    }
 }
 
 .page__date {
